Legger til tidspunktFraKilde felt i metadata
